--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,11 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
           server: ftp.abhi4136.odns.fr
-          username: 06@01-web.formation-adapeco-
+          username:  06@01-web.formation-adapeco-sofip.com
           password: aqFbABLGFz6wVhLe
           local-dir: dist/
           server-dir: /06/
+
+          
 
           
